CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

PROJECT(llvm-clang-demo)

IF (CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR)
  MESSAGE(FATAL_ERROR
      "In-source builds are not allowed. Please clean your source tree and try again.")
ENDIF ()

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall -g -O0 -Wno-unused-parameter -fno-strict-aliasing -fno-exceptions -fno-rtti")
MESSAGE(STATUS "CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")

FIND_PACKAGE(LLVM REQUIRED CONFIG)
FIND_PACKAGE(Clang REQUIRED CONFIG)
MESSAGE(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
MESSAGE(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
MESSAGE(STATUS "Using ClangConifg.cmake in ${CLANG_CMAKE_DIR}")
INCLUDE_DIRECTORIES(${LLVM_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CLANG_INCLUDE_DIRS})
ADD_DEFINITIONS(${LLVM_DEFINITIONS})

ADD_SUBDIRECTORY(source)
